# fortianalyzer-mcp

./: .env.example  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  no-ai-attribution.yml
docs/: INTERNAL_ARCHITECTURE.md
docs/adr/: 0002-baseline-total-for-pagination-handle.md
src/fortianalyzer_mcp/: __init__.py  server.py
src/fortianalyzer_mcp/api/: client.py
src/fortianalyzer_mcp/masking/: __init__.py  fields.py  fpe_engine.py  unmask.py  wrapper.py
src/fortianalyzer_mcp/skills/: __init__.py  catalog.py  dispatcher.py  handlers.py  models.py
src/fortianalyzer_mcp/tools/: dvm_tools.py  fortiview_tools.py  incident_tools.py  log_tools.py  pcap_tools.py  report_tools.py  system_tools.py  traffic_tools.py
src/fortianalyzer_mcp/utils/: config.py  log_clock.py  time_range.py  validation.py
tests/: conftest.py  test_client.py  test_device_filter.py  test_fortiview_tools.py  test_fpe_engine.py  test_incident_tools.py  test_log_clock.py  test_log_pagination.py  test_log_tools.py  test_logsearch_runner.py  test_masking_leak.py  test_masking_unmask.py  test_masking_wrapper.py  test_pcap_tools.py  test_report_tools.py  test_response_contract.py  test_security_regressions.py  test_skills.py  test_skills_app_usage.py  test_skills_identity_profile.py  test_skills_investigate.py  test_skills_network_context.py  test_skills_risk_assessment.py  test_skills_threat_intel.py  test_skills_wave2.py  test_time_range.py  test_traffic_tools.py
